fixed some borders and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,23 @@
   width: 15em;
 }
 
-.topbar-text {
+#topbar {
   text-align: center;
-  margin-bottom: 1em;
+  margin: auto;
+  width: 40%;
+  margin-bottom: 0.5em;
+  /* border-style: solid;
+  border-color: blue;
+  background-color: lightblue; */
 }
 
+#topbar img {
+  margin: .5em;
+}
+
+#topbar h1 {
+  margin-bottom: 0px;
+}
 .info-text {
   font-size: .75em;
   font-style: italic;
@@ -17,4 +29,12 @@
 .project-info .card {
   margin-top: .75em;
   margin-bottom: .75em;
+}
+
+.sign {
+  text-align: center;
+}
+
+.about-me .card~.card {
+  border-top: none;
 }
